restimonial created succesfully

--- a/vana.css
+++ b/vana.css
@@ -2300,10 +2300,11 @@ html {
     flex-direction: column;
     align-items: center;
     display: flex;
+    background-color: #f5f4f4;
   }
   
   .section.is--hero {
-    background-color: #fff;
+    background-color: #f5f4f4;
     padding-top: 0;
     position: relative;
   }
@@ -8272,8 +8273,62 @@ html {
 
 
 
+.section is--four{
+  background-color: #f5f4f4;
+}
 
-/* -------------------------------------------------------------------------------- ABOUT PAGE CSS------------------------------------------------------------------------------------- */
+
+
+
+
+.container2 {
+  display: flex;
+  flex-direction: row;
+  column-gap: 40px;
+margin: 10px 70px 90px 70px;
+
+  
+}
+
+.container2 .box_data{
+  padding: 65px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+  
+}
+.container2 .box_data .user{
+display: flex;
+flex-direction: row;
+text-align: center;
+}
+.container2 .box_data .user .info h5{
+  padding-top: 15px;
+  font-size:large;
+}
+.container2 .box_data .user .info p{
+  padding-top: px;
+  font-size: large;
+}
+
+.container2 .box_data .rating{
+  padding: 0 0 35px 0;
+}
+
+.container2 .box_data img{
+  width: 70px;
+  border-radius: 70%;
+  margin: 15px;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
